@@ -1,3 +1,6 @@
+# Unreleased
+- [impl][patch] Use `poll_write_vectored` in the TCP transport to write the header and body with a single syscall.
+
 # Version 0.5.0-alpha7 - 2022-01-10
 - [add][minor] Add a specific `Format` trait for generated interaces to avoid writing overly long trait bounds.
 
